# ai-tem-aluminium

./: .gitignore  README.md  pyproject.toml  setup.py
aliminium-tem-ai/: RCNN_training.py  UNET_training.py  u_net_pytorch.py
aluminium-tem-ai/: RCNN.ipynb  README.md  UNET.ipynb  YOLOv11.ipynb  cross.csv  lengths.csv  requirements.txt
data/: statistics.csv
data/valid_cross/: _annotations.coco.json
examples/: RCNN_training.py  StrengthModel.ipynb  StrengthModel.py  UNET_training.py  aspect_ratio.ipynb  invert_dark_field.ipynb  log_normal.ipynb  mask_var3_NA_statistics_cross.csv  mask_var3_NA_statistics_length.csv  model_comparison.ipynb  statistics_cross.csv  statistics_df.csv  statistics_lengths.csv  thickness_samples.xlsx  unet_var3_NA_statistics_cross.csv  unet_var3_NA_statistics_length.csv  var3_DAA_statistics_cross.csv  var3_DAA_statistics_df.csv  var3_DAA_statistics_length.csv  var3_NA_cross.csv  var3_NA_length.csv  var3_NA_statistics_cross.csv  var3_NA_statistics_cross.xlsx  var3_NA_statistics_df.csv  var3_NA_statistics_length.csv  var4_DAA_cross.csv  var4_DAA_length.csv  var4_DAA_statistics_cross.csv  var4_DAA_statistics_df.csv  var4_DAA_statistics_length.csv  var6_DAA_statistics_cross.csv  var6_DAA_statistics_df.csv  var6_DAA_statistics_length.csv  var6_NA_statistics_cross.csv  var6_NA_statistics_df.csv  var6_NA_statistics_length.csv  var6_PB_cross.csv  var6_PB_length.csv  var6_PB_statistics_cross.csv  var6_PB_statistics_df.csv  (+10 more)
src/master/: pre_processing_dark_field.ipynb
src/testMaster/: DatasetEvaluator.py  HolmedalStrengthModel.py  (+4 more)
tests/: test.py
(+11 files in other folders)
