[project]
name = "testMaster"
version = "0.1.0"
description = "aa"
dependencies = [
    "opencv-python",
    "pandas",
    "pycocotools",
    "torch",
    "torchvision",
]
requires-python = ">=3.10"
readme = "README.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/testMaster"]
