[project]
name = "testMaster"
version = "0.1.0"
description = "aa"
dependencies = [
    "opencv-python>=4.11.0.86",
    "pandas>=2.2.3",
    "pycocotools>=2.0.8",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
]
requires-python = ">=3.10"
readme = "README.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/testMaster"]
